[gd_scene load_steps=6 format=3 uid="uid://ciors68i7i3jv"]

[ext_resource type="Theme" uid="uid://bngt8jkm3fvb1" path="res://Resources/hud_elements/default.theme" id="1_41enn"]
[ext_resource type="Script" uid="uid://d06fhscpeqxal" path="res://HUDs/ChangeSpells.gd" id="1_ux4n7"]
[ext_resource type="PackedScene" uid="uid://jb02v63no31m" path="res://Resources/hud_elements/SkillIcon.tscn" id="2_03qwh"]

[sub_resource type="LabelSettings" id="LabelSettings_02eau"]
font_size = 40
outline_size = 12
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0.237539, 0.237539, 0.237539, 0.556863)
shadow_offset = Vector2(3, 4)

[sub_resource type="LabelSettings" id="LabelSettings_0mdcp"]
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="ChangeSpells" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_ux4n7")

[node name="ScreenDimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0, 0.215686, 0.392157)

[node name="Control" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
theme = ExtResource("1_41enn")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Control/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Spells"
label_settings = SubResource("LabelSettings_02eau")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3

[node name="EquippedAbilities" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EquippedTitles" type="Label" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities"]
layout_mode = 2
text = "Equipped Spells"
label_settings = SubResource("LabelSettings_0mdcp")
horizontal_alignment = 1

[node name="Ability1" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2

[node name="Body" type="ColorRect" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability1"]
layout_mode = 2
color = Color(0, 0, 0, 0.392157)

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability1"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability1/HBoxContainer"]
custom_minimum_size = Vector2(2, 2.08165e-12)
layout_mode = 2

[node name="SkillMargin" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 2

[node name="SkillIcon" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability1/HBoxContainer/SkillMargin" instance=ExtResource("2_03qwh")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="SkillName" type="Label" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Q:"

[node name="Ability2" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2

[node name="Body" type="ColorRect" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability2"]
layout_mode = 2
color = Color(0, 0, 0, 0.392157)

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability2/HBoxContainer"]
custom_minimum_size = Vector2(2, 2.08165e-12)
layout_mode = 2

[node name="SkillMargin" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 2

[node name="SkillIcon" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability2/HBoxContainer/SkillMargin" instance=ExtResource("2_03qwh")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3

[node name="SkillName" type="Label" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Q:"

[node name="Ability3" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2

[node name="Body" type="ColorRect" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability3"]
layout_mode = 2
color = Color(0, 0, 0, 0.392157)

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability3"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability3/HBoxContainer"]
custom_minimum_size = Vector2(2, 2.08165e-12)
layout_mode = 2

[node name="SkillMargin" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 2

[node name="SkillIcon" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability3/HBoxContainer/SkillMargin" instance=ExtResource("2_03qwh")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3

[node name="SkillName" type="Label" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Q:"

[node name="Ability4" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2

[node name="Body" type="ColorRect" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability4"]
layout_mode = 2
color = Color(0, 0, 0, 0.392157)

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability4"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability4/HBoxContainer"]
custom_minimum_size = Vector2(2, 2.08165e-12)
layout_mode = 2

[node name="SkillMargin" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 2

[node name="SkillIcon" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability4/HBoxContainer/SkillMargin" instance=ExtResource("2_03qwh")]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3

[node name="SkillName" type="Label" parent="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Q:"

[node name="OwnedAbilities" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/OwnedAbilities"]
layout_mode = 2
text = "Owned Spells"
label_settings = SubResource("LabelSettings_0mdcp")
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="Control/VBoxContainer/HBoxContainer/OwnedAbilities"]
layout_mode = 2
size_flags_vertical = 3
item_count = 1

[node name="EquipSkill" type="Button" parent="Control/VBoxContainer/HBoxContainer/OwnedAbilities"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Equip selected spell"

[connection signal="gui_input" from="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability1" to="." method="_on_ability_1_gui_input"]
[connection signal="gui_input" from="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability2" to="." method="_on_ability_2_gui_input"]
[connection signal="gui_input" from="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability3" to="." method="_on_ability_3_gui_input"]
[connection signal="gui_input" from="Control/VBoxContainer/HBoxContainer/EquippedAbilities/Ability4" to="." method="_on_ability_4_gui_input"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/OwnedAbilities/EquipSkill" to="." method="_on_equip_skill_pressed"]
